# BOExplain

./: .buildinfo  LICENSE  README.md  adult.ipynb  credit.ipynb  genindex.html  house.ipynb  index.html  objects.inv  py-modindex.html  pyproject.toml  scorpion.ipynb  search.html  searchindex.js
_sources/api_reference/: boexplain.files.search.rst.txt  boexplain.rst.txt
api_reference/: boexplain.files.search.html  boexplain.html
boexplain/: __init__.py
boexplain/files/: __init__.py  cat_xform.py  search.py  stats.py  tpe_wrapper.py
boexplain/optuna/optuna/: __init__.py  distributions.py  logging.py  progress_bar.py  structs.py  study.py
boexplain/optuna/optuna/pruners/: __init__.py  base.py  nop.py
boexplain/optuna/optuna/samplers/: __init__.py  _search_space.py  base.py  random.py
boexplain/optuna/optuna/samplers/tpe/: __init__.py  parzen_estimator.py  sampler.py
boexplain/optuna/optuna/storages/: __init__.py  base.py  in_memory.py
boexplain/optuna/optuna/trial/: __init__.py  _base.py  _fixed.py  _frozen.py  _trial.py  _util.py
data/: scorpion_synth2d_easy.csv  scorpion_synth2d_hard.csv  scorpion_synth3d_easy.csv  scorpion_synth3d_hard.csv
docs/source/: conf.py  index.rst
results/: adult.json  credit.json  scorpion_synth2d_easy.json  scorpion_synth2d_hard.json  scorpion_synth3d_easy.json  scorpion_synth3d_hard.json
