[tool.poetry]
name = "boexplain"
version = "0.1.1"
description = "BOExplain"
authors = ["Brandon Lockhart <brandon_lockhart@sfu.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sfu-db/BOExplain"
homepage = "https://github.com/sfu-db/BOExplain"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.2.1"
numpy = "1.20.0"
scipy = "1.6.0"
scikit-learn = "0.24.1"
altair = "4.1.0"
imblearn = "0.0"
tqdm = "4.51.0"
colorlog = "4.4.0"
numpyencoder = "0.3.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
jupyter = "^1"
ipykernel = "^5"

[tool.black]
line-length = 99
target-version = ['py38']

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
